--- a/lab3/Pedometer_IIoT/app/src/main/res/values/strings.xml
+++ b/lab3/Pedometer_IIoT/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
 <string name="onAccuracyChanged">onAccuracyChanged doesn’t
     detonate</string>
 <string name="AT">0</string>
+    <string name="Steps">0</string>
 <string name="Button_Write">Write</string>
 <string name="Button_Stop">Stop</string>
 </resources>
